# OAC2-EP2

./: .gitignore  CMakeLists.txt  README.md  output_test.txt  readme
files/: output_test_control.txt  output_test_expanded.txt  output_test_expanded_control.txt  xtest_10k.txt  xtest_1k.txt  xtest_expanded.txt  xtrain_100k.txt  xtrain_expanded.txt  ytrain200000.txt  ytrain_100k.txt  ytrain_expanded.txt
scripts/: run_test.sh
src/: file_reader.c  file_reader.h  main.c  omptest.c
